# CPP_APIs

./: .clang-format  .clangd  .dir-locals.el  .envrc  .gitignore  CMakeLists.txt  Makefile  README.md  generate_clangd_config.sh  grep  main  main.cpp
02_SRC/FC0_00/: Log.cpp  math.cpp  test.h
02_SRC/FC0_01/: header_file.h  main_pro  main_pro.cpp
03_Brain/: main.cpp  myFunctions.cpp  myFunctions.hpp
CMAKE_FUNDAMENTALS/CMAKE_INDEPTH/: README.md
CMAKE_FUNDAMENTALS/CMAKE_INDEPTH/Complite_CPP_Using_CMake_and_Make/: CMakeLists.txt  README.md  main.cpp
CPP_ProjectTestXCode/TestingGh.xcodeproj/: project.pbxproj
TestingGh.xcodeproj/: project.pbxproj
TestingGh.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cmake/: UpdateSubmodules.cmake
dependencies/: INSTALL_RECEIPT.json
docs/: .pdf-view-restore  array_concepts.md  array_concepts.md.temp  c_tips_and_tricks.md  constexpr.md  data_types.md  functions_and_methods.md  general_cpp.md  pointer_more_insight.md  pointer_to_pointer.md  pointers.md  references.md  stack_vs_heap.md  string_c_style.md  tipes_and_tricks.md  tips_and_tricks.md  variables.md
docs/CheatSheet/: CPP_Cheat_Sheet_General.md
docs/classes_and_Structs/: .pdf-view-restore  Heap_Allocation_NEW_keyword.md  classes_concepts_fundamentals.md  classes_in_cpp_intro.md  classes_with_RVO.md  constructors.md  copying_and_copy_constructors.md  destructors.md  enums.md  friend_methods.md  ideal_class_template.md  inheritance_in_cpp.md  object_lifetime.md  operators_and_operator_overloading_in_cpp.md  ownership_with_classes.md  pure_virtual_function_interface_abstract.md  rule_of_five.md  static_in_cpp.md  this.md  virtual_functions.md
docs/general_concepts/: array_concepts.md  casting.md  const_usage.md  cuda_programming.md  data_types.md  functions_and_methods.md  references.md  stack_vs_heap.md  string_c_style.md  (+1 more)
scripts/: .clangd  clangd_os_mapper.sh
src/: C0_00  C0_00.cpp  CMakeLists.txt  Log.cpp  README.md  concepts_bundles.hpp  main  main.cpp  main.cpp.old  math.cpp  moduleA.cpp  moduleAHeader.hpp
src/00_ACPP_PRIMER/FC0_00/: C0_00.cpp  functions_called_by_headers.cpp
src/FC0_00/: C0_00  C0_00.cpp  Log.cpp  functions_called_by_headers.cpp  math.cpp  test.h
src/FC0_01/: calling_functions.cpp  header_file.h  main_pro  main_pro.cpp
src/Fundamentals/: README.md  functions  functions.cpp  variables  variables.cpp
src/concepts/: classes.cpp  classes.hpp  mylogging.cpp  mylogging.hpp  variables.cpp  variables.hpp
src/concepts/array_and_list/: array_concept.cpp  array_concept.hpp
src/concepts/classes/: Friends.cpp  Friends.hpp  VirtualFunctions.cpp  VirtualFunctions.hpp  classes.cpp  classes.hpp  classes_intro.cpp  classes_intro.hpp  classes_structs_size.cpp  classes_structs_size.hpp  copying_and_copy_constructor.cpp  copying_and_copy_constructor.hpp  enums_intro.cpp  enums_intro.hpp  lvalues_and_rvalues_intro.cpp  lvalues_and_rvalues_intro.hpp  move_semantics.cpp  move_semantics.hpp  object_lifetime.cpp  object_lifetime.hpp  operators.hpp  operatos.cpp  std_move_and_move_assignment_operator.cpp  std_move_and_move_assignment_operator.hpp
src/concepts/data_types/: variables.cpp  variables.hpp
src/concepts/features/: timing.cpp  timing.hpp  track_memory_allocation.cpp  track_memory_allocation.hpp
src/concepts/m_const/: t_constant.cpp  t_constant.hpp
src/concepts/m_string/: t_string.cpp  t_string.hpp
src/concepts/pointers_and_ref/: double_pointers.cpp  double_pointers.hpp  pointers.cpp  pointers.hpp  smart_pointers.cpp  smart_pointers.hpp
src/experimentals/: CMakeLists.txt  exper1.cpp  exper1.hpp
src/lib/: Employee.cpp  Employee.hpp
src/logs/: main.ERROR  main.GMacBookPro.local.gmbp.log.ERROR.20240122-183917.1774  main.GMacBookPro.local.gmbp.log.ERROR.20240122-183935.2141  main.GMacBookPro.local.gmbp.log.ERROR.20240122-184032.2348  main.GMacBookPro.local.gmbp.log.ERROR.20240122-184125.2660  main.GMacBookPro.local.gmbp.log.INFO.20240122-183917.1774  main.GMacBookPro.local.gmbp.log.INFO.20240122-183935.2141  main.GMacBookPro.local.gmbp.log.INFO.20240122-184032.2348  main.GMacBookPro.local.gmbp.log.INFO.20240122-184125.2660  main.GMacBookPro.local.gmbp.log.INFO.20240122-205626.25130  main.GMacBookPro.local.gmbp.log.INFO.20240122-205731.25392  main.GMacBookPro.local.gmbp.log.INFO.20240122-223715.43278  main.GMacBookPro.local.gmbp.log.INFO.20240122-223830.43438  main.GMacBookPro.local.gmbp.log.INFO.20240122-224036.43605  main.GMacBookPro.local.gmbp.log.INFO.20240122-224104.43748  main.GMacBookPro.local.gmbp.log.INFO.20240122-224322.44574  main.GMacBookPro.local.gmbp.log.INFO.20240122-224342.44760  main.GMacBookPro.local.gmbp.log.INFO.20240122-224536.44971  main.GMacBookPro.local.gmbp.log.INFO.20240122-224635.45184  main.GMacBookPro.local.gmbp.log.INFO.20240123-234900.84096  main.GMacBookPro.local.gmbp.log.INFO.20240123-235039.84470  main.GMacBookPro.local.gmbp.log.INFO.20240123-235332.84856  main.GMacBookPro.local.gmbp.log.INFO.20240123-235651.85409  main.GMacBookPro.local.gmbp.log.INFO.20240124-001525.88335  main.GMacBookPro.local.gmbp.log.INFO.20240124-003949.90271  main.GMacBookPro.local.gmbp.log.INFO.20240124-005530.92405  main.GMacBookPro.local.gmbp.log.INFO.20240124-005813.93336  main.GMacBookPro.local.gmbp.log.INFO.20240124-015230.96355  main.GMacBookPro.local.gmbp.log.INFO.20240124-015258.96667  main.GMacBookPro.local.gmbp.log.INFO.20240124-022955.99773  main.GMacBookPro.local.gmbp.log.INFO.20240124-023014.111  main.GMacBookPro.local.gmbp.log.INFO.20240124-025736.2088  main.GMacBookPro.local.gmbp.log.INFO.20240124-025940.2588  main.GMacBookPro.local.gmbp.log.INFO.20240124-134742.18835  main.GMacBookPro.local.gmbp.log.INFO.20240124-134812.19068  main.GMacBookPro.local.gmbp.log.INFO.20240124-135335.19394  main.GMacBookPro.local.gmbp.log.INFO.20240124-140353.19866  main.GMacBookPro.local.gmbp.log.INFO.20240124-140432.20156  main.GMacBookPro.local.gmbp.log.INFO.20240124-140529.20395  main.GMacBookPro.local.gmbp.log.INFO.20240124-140602.20665  (+505 more)
src/pointers/: README.md
src/vault/: variables.cpp
tests/: CMakeLists.txt  my_test1.cpp
(+38 files in other folders)
